// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`configureController\` sets the options as expected 1`] = `
Controller {
  "mode": "client",
  "throwOnError": true,
}
`;

exports[`\`configureController\` sets the options as expected 2`] = `
Controller {
  "errorHandler": [Function],
  "mode": "client",
  "throwOnError": true,
}
`;

exports[`\`configureController\` sets the options as expected 3`] = `
Controller {
  "baseUrl": "http://example.com/",
  "mode": "client",
  "throwOnError": true,
}
`;

exports[`\`configureController\` sets the options as expected 4`] = `
Controller {
  "mode": "client",
  "throwOnError": true,
}
`;

exports[`\`configureController\` sets the options as expected 5`] = `
Controller {
  "mode": "server",
  "throwOnError": true,
}
`;

exports[`\`configureController\` sets the options as expected 6`] = `
Controller {
  "baseUrl": "http://example.com/",
  "errorHandler": [Function],
  "mode": "server",
  "throwOnError": true,
}
`;

exports[`\`configureController\` throws an error when called with a non-@controller 1`] = `"Tried to configure an object which is not a @controller. Check NotAController."`;


